feat(phase19): 체크리스트 가중치 차등 — 필수 / 가산 분리 (Sonnet 지적)
기존 룰의 한계: passed >= N 단순 카운트 → 3/5 충족이어도 어떤 3개냐에 따라 리스크 매우 다름.
  예: tradable + shortSelling + conclusion 충족 vs tradable + composite + consecutiveBuy 충족.
  전자는 펀더멘털 미확인이라 위험, 후자는 가격 신선도 미확인이라 위험. 같은 CAUTION 노출은 부정확.

새 룰 (가중치 차등):
- 필수 항목 (1개라도 미충족 → 즉시 NOT_RECOMMENDED):
  - tradable: 거래정지/상폐 아님
  - shortSelling: 공매도 비율 < 5%
- 가산 항목 (3개 중 충족 수에 따라 등급):
  - consecutiveBuy / compositeSignal / conclusion
- 등급:
  - 가산 3/3 → STRONG
  - 2/3 → MODERATE
  - 1/3 → CAUTION
  - 0/3 → NOT_RECOMMENDED (필수만 통과는 진입 근거 부족)

기대 효과: 필수 미충족 시 다른 항목이 양호해도 강한 경고 — 봇 룰의 hard rule 의미 복원.

단위 테스트 5개 추가 + 기존 테스트 새 룰에 맞게 갱신. 전체 회귀 통과.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>